# PySQReg

./: .gitignore  LICENSE  README.md  medellin_barrios.ipynb  pruebas.ipynb  pyproject.toml  tutorial.ipynb
examples/: tutorial.ipynb
pysqreg/: __init__.py  areal.py  plots.py
pysqreg/areal/: __init__.py  _base.py  _diagnostics.py  sar.py  sdm.py  slx.py
pysqreg/spatiotemporal/: __init__.py  _base.py  _panel.py  sar.py  sdm.py  slx.py
