[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysqreg"
version = "0.1.0"
description = "Spatial Quantile Regression for areal (lattice) data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tomas Rodriguez", email = "torodriguezt@unal.edu.co" },
]
keywords = [
    "spatial",
    "quantile-regression",
    "econometrics",
    "SAR",
    "spatial-autoregressive",
    "areal-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "statsmodels>=0.13",
    "scipy>=1.8",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/torodriguezt/PySQReg"
Repository = "https://github.com/torodriguezt/PySQReg"
Issues = "https://github.com/torodriguezt/PySQReg/issues"
